adding sendgrid to signup

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ PORT=
 DB_PORT=
 DB_HOST=
 SECRET_KEY=
+EMAIL_VERIFY_URL_TEST=
+EMAIL_VERIFY_URL_DEV=
+EMAIL_VERIFY_URL_PROD=
+WEB_MAIL_URL=
+SEND_GRID_KEY=
