--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "start": "babel-node api/index.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.3.0",
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
@@ -41,6 +43,7 @@
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.1.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0"
   }
 }
