--- a/package.json
+++ b/package.json
@@ -41,9 +41,14 @@
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "mocha": "^8.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "prettier": "^1.18.2",
     "sequelize-cli": "^6.2.0"
   }
 }
