--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "babel-node api/index.js"
   },
   "dependencies": {
+    "@chec/commerce.js": "^2.2.0",
     "@sendgrid/mail": "^7.3.0",
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
