--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ EMAIL_VERIFY_URL_DEV=
 EMAIL_VERIFY_URL_PROD=
 WEB_MAIL_URL=
 SEND_GRID_KEY=
+REACT_APP_CHEC_PUBLIC_KEY=pk_184625ed86f36703d7d233bcf6d519a4f9398f20048ec
+
